--- a/GameAiLib.csproj
+++ b/GameAiLib.csproj
@@ -47,10 +47,12 @@
     <Compile Include="GenericBrain.cs" />
     <Compile Include="IBrain.cs" />
     <Compile Include="IGame.cs" />
+    <Compile Include="GenericMinimaxBrain.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RandomBrain.cs" />
+    <Compile Include="Connect4.cs" />
     <Compile Include="TicTacToe.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
