--- a/GameAiLib.csproj
+++ b/GameAiLib.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connect4MoveCache.cs" />
     <Compile Include="Connect4Cache.cs" />
     <Compile Include="Connect4New.cs" />
     <Compile Include="Game.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="IGameNew.cs" />
     <Compile Include="IGame.cs" />
     <Compile Include="GenericMinimaxBrain.cs" />
+    <Compile Include="IMoveCache.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
