--- a/GameAiLib.csproj
+++ b/GameAiLib.csproj
@@ -61,30 +61,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connect4MoveCache.cs" />
-    <Compile Include="Connect4Cache.cs" />
-    <Compile Include="Connect4New.cs" />
+    <Compile Include="Connect4\Connect4MoveCache.cs" />
+    <Compile Include="Connect4\Connect4Cache.cs" />
+    <Compile Include="Connect4\Connect4.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="GenericBrainNew.cs" />
     <Compile Include="GenericBrain.cs" />
+    <Compile Include="Obsolete\GenericBrainOld.cs" />
     <Compile Include="GenericNegamaxBrain.cs" />
-    <Compile Include="IBrainNew.cs" />
     <Compile Include="IBrain.cs" />
+    <Compile Include="Obsolete\IBrainOld.cs" />
     <Compile Include="ICache.cs" />
-    <Compile Include="IGameNew.cs" />
     <Compile Include="IGame.cs" />
+    <Compile Include="Obsolete\IGameOld.cs" />
     <Compile Include="GenericMinimaxBrain.cs" />
     <Compile Include="IMoveCache.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomBrainNew.cs" />
     <Compile Include="RandomBrain.cs" />
-    <Compile Include="Connect4.cs" />
+    <Compile Include="Obsolete\RandomBrainOld.cs" />
+    <Compile Include="Obsolete\Connect4Old.cs" />
     <Compile Include="SimpleNegamaxBrain.cs" />
     <Compile Include="SimpleMinimaxBrain.cs" />
-    <Compile Include="TicTacToeNew.cs" />
-    <Compile Include="TicTacToe.cs" />
+    <Compile Include="TicTacToe\TicTacToe.cs" />
+    <Compile Include="Obsolete\TicTacToeOld.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
