--- a/GameAiLib.csproj
+++ b/GameAiLib.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Connect4\Connect4MoveCache.cs" />
     <Compile Include="Connect4\Connect4Cache.cs" />
     <Compile Include="Connect4\Connect4.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GenericBrain.cs" />
     <Compile Include="Obsolete\GenericBrainOld.cs" />
