--- a/GameAiLib.csproj
+++ b/GameAiLib.csproj
@@ -87,6 +87,7 @@
     <Compile Include="SimpleMinimaxBrain.cs" />
     <Compile Include="TicTacToe\TicTacToe.cs" />
     <Compile Include="Obsolete\TicTacToeOld.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
